--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -34,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/label_tipo"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <Spinner
@@ -63,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/label_provincia"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <Spinner
@@ -90,6 +92,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="@string/label_tipo_de_turismo"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <Spinner
@@ -116,6 +119,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/label_nombre"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -145,6 +149,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Descripción:"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -172,6 +177,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/label_linea"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -199,6 +205,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/label_fecha"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -229,6 +236,7 @@
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="1"
                     android:text="@string/label_email"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -258,6 +266,7 @@
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="1"
                     android:text="@string/label_direccion"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -286,6 +295,7 @@
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="1"
                     android:text="@string/label_pagina_web"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -314,6 +324,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Teléfono:"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -344,6 +355,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Horario:"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -373,6 +385,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Latitud:"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
@@ -402,6 +415,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="Longitud:"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/size_text_primary"/>
 
                 <EditText
