--- a/app/src/main/res/layout/activity_buscar_por_tipo.xml
+++ b/app/src/main/res/layout/activity_buscar_por_tipo.xml
@@ -32,7 +32,9 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="@string/label_clasificacion_del_turismo_en_cochabamba"
-                        android:textSize="19sp" />
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
                 </LinearLayout>
 
                 <LinearLayout
