--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -16,6 +16,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/layout_rol_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <TextView
+                    android:id="@+id/label_textView_rolUser"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/label_rolUser"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/size_text_primary"/>
+
+                <Spinner
+                    android:id="@+id/spinner_rolUser"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@array/rol_user"
+                    android:textSize="@dimen/size_text_primary"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/editar_layout_nombre_user"
