--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -40,7 +40,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="@array/rol_user"
+                    android:text="@array/tipo_rol_user"
                     android:textSize="@dimen/size_text_primary"/>
             </LinearLayout>
 
