opcion de editar y eliminar hoteles, restaurantes y lugares por el administrador y revisor

--- a/app/src/main/res/layout/activity_descripcion_hotel.xml
+++ b/app/src/main/res/layout/activity_descripcion_hotel.xml
@@ -131,6 +131,26 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/linearLayoutRegistradoPor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewRegistradoPor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Registrado por:"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/textViewRegistradoPorText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+            </LinearLayout>
 
             <include layout="@layout/content_button_description"/>
         </LinearLayout>
