--- a/app/src/main/res/layout/activity_descripcion_turistico.xml
+++ b/app/src/main/res/layout/activity_descripcion_turistico.xml
@@ -247,7 +247,26 @@
                         android:layout_height="wrap_content"
                         android:text="" />
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/linearLayoutRegistradoPor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/textViewRegistradoPor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Registrado por:"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/textViewRegistradoPorText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="" />
+                </LinearLayout>
                 <include layout="@layout/content_button_description"/>
             </LinearLayout>
         </ScrollView>
