--- a/app/src/main/res/layout/activity_lista_acontecimientos.xml
+++ b/app/src/main/res/layout/activity_lista_acontecimientos.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hga.appturismo.activity.MainActivity">
+    tools:context="com.hga.appturismo.activity.ListaLugaresActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingLeft="@dimen/padding_horizontal_fragment"
         android:paddingRight="@dimen/padding_horizontal_fragment"
@@ -22,4 +22,15 @@
             android:layout_height="match_parent"/>
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:onClick="goMapLugar"
+        android:src="@android:drawable/ic_dialog_map"
+        app:backgroundTint="@color/colorPrimary" />
+
+</android.support.design.widget.CoordinatorLayout>
