--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="margintop_icon_locationmap">5dp</dimen>
     <dimen name="margintop_text_locationmap">15dp</dimen>
     <dimen name="marginleft_text_locationmap">5dp</dimen>
+    <dimen name="activity_vertical_margin_acontecimiento">12dp</dimen>
 </resources>
