--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,14 +67,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:weightSum="1">
+                android:visibility="visible"
+                android:padding="10dp">
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:scaleType="centerCrop"
 
                     app:srcCompat="@drawable/img_portada"/>
@@ -82,148 +81,55 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <HorizontalScrollView
+                android:layout_height="@dimen/height_card_service"
+                android:padding="0dp"
+                android:layout_margin="0dp">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/imagenAcontecimiento"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/cardViewAcontecimientos"
-                    android:scrollbars="none">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorPrimary"
-                        android:orientation="horizontal">
-
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            tools:ignore="UselessParent">
-
-                            <ImageView
-                                android:id="@+id/imageCardView"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_card_service"
-                                android:layout_marginBottom="5dp"
-                                android:layout_marginTop="5dp"
-                                android:background="@drawable/icon_subir_lugares"
-                                android:scaleType="centerCrop" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom|end"
-                                android:layout_marginBottom="80dp"
-                                android:id="@+id/linearLayoutCardViewButtons"
-                                android:orientation="horizontal">
-
-                                <android.support.design.widget.FloatingActionButton
-                                    android:id="@+id/btn_editar"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
-                                    android:src="@drawable/ic_mode_edit" />
-
-                                <android.support.design.widget.FloatingActionButton
-                                    android:id="@+id/btn_eliminar"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
-                                    android:src="@drawable/ic_delete" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom"
-                                android:background="@color/backgroundCard"
-                                android:orientation="vertical"
-                                android:paddingTop="@dimen/activity_vertical_margin"
-                                android:paddingBottom="@dimen/activity_vertical_margin"
-                                android:paddingLeft="5dp"
-                                android:paddingRight="5dp">
-
-                                <TextView
-                                    android:id="@+id/nameCardView"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="@android:color/white"
-                                    android:textStyle="bold"
-                                    android:paddingRight="10dp"/>
-
-                                <LinearLayout
-                                    android:id="@+id/puntuacion"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:id="@+id/puntajeCardView"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Puntaje:"
-                                        android:textColor="@android:color/holo_blue_light"
-                                        android:textStyle="bold"/>
-
-                                    <TextView
-                                        android:id="@+id/promedioCardView"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="@android:color/holo_blue_light"
-                                        android:paddingRight="10dp"
-                                        android:textStyle="bold"/>
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    android:id="@+id/calificacion"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:paddingLeft="25dp">
-
-                                    <CheckBox
-                                        android:id="@+id/star1"
-                                        style="?android:attr/starStyle"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:tag="1"/>
-
-                                    <CheckBox
-                                        android:id="@+id/star2"
-                                        style="?android:attr/starStyle"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:tag="2"/>
-
-                                    <CheckBox
-                                        android:id="@+id/star3"
-                                        style="?android:attr/starStyle"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:tag="3"/>
-
-                                    <CheckBox
-                                        android:id="@+id/star4"
-                                        style="?android:attr/starStyle"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:tag="4"/>
-
-                                    <CheckBox
-                                        android:id="@+id/star5"
-                                        style="?android:attr/starStyle"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:tag="5"/>
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-
-                        </FrameLayout>
-                    </LinearLayout>
-                </HorizontalScrollView>
+                    android:layout_height="match_parent"
+                    android:padding="0dp"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax" />
 
             </LinearLayout>
+
+            <!--<LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@color/backgroundCard"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/activity_vertical_margin_acontecimiento"
+                android:paddingBottom="@dimen/activity_vertical_margin_acontecimiento"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <LinearLayout
+                    android:id="@+id/fecha_inicio_acontecimiento"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/acontecimiento_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/acontecimiento"
+                        android:textColor="@android:color/holo_blue_light"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/textview_fecha_inicio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/holo_blue_light"
+                        android:paddingRight="10dp"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+
+            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
