- mostrar lista de acontecimientos en portada

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,8 +68,8 @@
                 android:id="@+id/layout_container_portada"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -80,23 +80,67 @@
                     app:srcCompat="@drawable/img_portada"/>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/layout_container_acontecimientos"
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/height_card_service"
-                android:padding="0dp"
-                android:visibility="visible"
-                android:layout_margin="0dp">
+                android:layout_height="match_parent"
+                tools:ignore="UselessParent">
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/imagenAcontecimiento"
+                <LinearLayout
+                    android:id="@+id/layout_container_acontecimientos"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/height_card_service"
+                    android:layout_margin="0dp"
+                    android:orientation="horizontal"
                     android:padding="0dp"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax" />
+                    android:visibility="visible">
 
-            </LinearLayout>
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/imagenAcontecimiento"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorPrimary"
+                        app:layout_collapseMode="parallax">
+
+                        <LinearLayout
+                            android:id="@+id/layoutTextAconteimientos"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="bottom"
+                            android:background="@color/backgroundCard"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/nameAcontecimientoCardView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingRight="10dp"
+                                android:text="nombreAcontecimiento"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:id="@+id/fechaAcontecimientoCardView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingRight="10dp"
+                                android:text="FechaAcontecimiento//"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:id="@+id/horaAcontecimientoCardView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingRight="10dp"
+                                android:text="HoraAcontecimiento//"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                    </android.support.v4.view.ViewPager>
+                </LinearLayout>
+
+            </FrameLayout>
 
             <!--<LinearLayout
                 android:layout_width="match_parent"
@@ -159,10 +203,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="3"
+                android:baselineAligned="false"
                 android:gravity="center"
-                android:baselineAligned="false">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <LinearLayout
                     android:id="@+id/layout_container_add_site"
