--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,10 @@
 
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/menuMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -21,15 +23,33 @@
 
     </android.support.design.widget.AppBarLayout>
 
--    <ProgressBar
-        android:id="@+id/main_progress"
+    <LinearLayout
+        android:id="@+id/progressBarLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progressBarHorizontal"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="50dp" />
+
+        <ProgressBar
+            android:id="@+id/main_progress"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center" />
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
+        android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -146,42 +166,6 @@
                 </LinearLayout>
 
             </FrameLayout>
-
-            <!--<LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:background="@color/backgroundCard"
-                android:orientation="vertical"
-                android:paddingTop="@dimen/activity_vertical_margin_acontecimiento"
-                android:paddingBottom="@dimen/activity_vertical_margin_acontecimiento"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp">
-
-                <LinearLayout
-                    android:id="@+id/fecha_inicio_acontecimiento"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/acontecimiento_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/acontecimiento"
-                        android:textColor="@android:color/holo_blue_light"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:id="@+id/textview_fecha_inicio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_blue_light"
-                        android:paddingRight="10dp"
-                        android:textStyle="bold"/>
-                </LinearLayout>
-
-            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
