--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,44 +125,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/colorPrimary"
-                        app:layout_collapseMode="parallax">
+                        app:layout_collapseMode="parallax"/>
 
-                        <LinearLayout
-                            android:id="@+id/layoutTextAconteimientos"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="bottom"
-                            android:background="@color/backgroundCard"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/nameAcontecimientoCardView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:paddingRight="10dp"
-                                android:text="nombreAcontecimiento"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/fechaAcontecimientoCardView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:paddingRight="10dp"
-                                android:text="FechaAcontecimiento//"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/horaAcontecimientoCardView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:paddingRight="10dp"
-                                android:text="HoraAcontecimiento//"
-                                android:textColor="@android:color/holo_blue_light"
-                                android:textStyle="bold"/>
-                        </LinearLayout>
-                    </android.support.v4.view.ViewPager>
                 </LinearLayout>
 
             </FrameLayout>
