--- a/app/src/main/res/layout/cardview_list_users.xml
+++ b/app/src/main/res/layout/cardview_list_users.xml
@@ -38,6 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:visibility="gone"
                     android:src="@drawable/ic_delete" />
             </LinearLayout>
             <LinearLayout
