--- a/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/app/src/main/res/layout/activity_editar_usuario.xml
@@ -5,8 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hga.appturismo.activity.EditarUsuarioActivity">
+    <ProgressBar
+        android:id="@+id/progress_bar_usuario"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
     <ScrollView
+        android:id="@+id/editar_usuario_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="15dp"
@@ -204,22 +210,6 @@
                     android:text="Guardar"
                     android:textAllCaps="false"
                     tools:targetApi="lollipop"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/padding_horizontal_fragment"
-                android:paddingRight="@dimen/padding_horizontal_fragment"
-                android:paddingTop="@dimen/padding_horizontal_fragment"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/puntajeLugarRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
