--- a/app/src/main/res/layout/activity_insertar_lugar.xml
+++ b/app/src/main/res/layout/activity_insertar_lugar.xml
@@ -215,7 +215,7 @@
                     android:layout_marginBottom="@dimen/margin_label_top_bottom"
                     android:layout_marginTop="@dimen/margin_label_top_bottom"
                     android:layout_weight="2"
-                    android:inputType="date"
+                    android:inputType="text"
                     android:textSize="@dimen/size_text_primary"/>
 
             </LinearLayout>
