--- a/app/src/main/res/layout/content_button_description.xml
+++ b/app/src/main/res/layout/content_button_description.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:weightSum="1">
 
     <Button
         android:id="@+id/buttonAudio"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:paddingRight="10dp"
         android:text="Audio Guia"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        tools:ignore="ButtonStyle"/>
 
     <Button
         android:id="@+id/buttonTrazarRuta"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:paddingLeft="10dp"
         android:text="Trazar  Ruta"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        tools:ignore="ButtonStyle"/>
 </LinearLayout>
