--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -55,7 +55,8 @@
                 android:layout_marginLeft="@dimen/marginleft_icon_locationmap"
                 android:layout_marginTop="@dimen/margintop_icon_locationmap"
                 android:padding="1dp"
-                android:src="@drawable/ic_walking" />
+                android:src="@drawable/ic_walking"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tvDurationWalking"
@@ -64,7 +65,8 @@
                 android:layout_marginLeft="@dimen/marginleft_text_locationmap"
                 android:layout_marginTop="@dimen/margintop_text_locationmap"
                 android:text="0 min"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/colorAccent"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
