actualizado edicion e insercion -eliminado fecha en editar e insertar hoteles -eliminado fecha en editar e insertar restaurantes -agregado linea a editar e insertar hoteles -agregado linea a editar e insertar restaurantes

--- a/app/src/main/res/layout/activity_descripcion_restaurante.xml
+++ b/app/src/main/res/layout/activity_descripcion_restaurante.xml
@@ -73,6 +73,26 @@
                     android:text="" />
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/linearLayoutLinea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewlinea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Linea: "
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textViewLineaText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -132,6 +152,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayoutPaginaWeb"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -152,6 +173,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayoutEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
